# BibleAI

./: .gitignore  README.md  config.py  gui.py  main.py  pyproject.toml  requirements.txt
data/: jsonformat.txt
