[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bibleai"
version = "0.1.0"
description = "AI-powered Bible analysis and exploration tool"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Project Author" }
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
    "tqdm>=4.62.0",
    "requests>=2.26.0",
    "sentence-transformers>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi-line_output = 3 